# BigData_DAMG7245_F25

./: README.md  data_processor.py  docling.md  poc_exp.ipynb  poetry.md  table_parser_lib.py
documentation/: camelot.md  pytesseract.md
lab_2/: image_tesseract_demo.py  pyproject.toml
lab_2/documentation/: camelot.md  docling.md  pytesseract.md
lab_2/output/tables/: 2408.09869v5-table-1.html
lab_3/cli_app_demo/: argparse.md  hello.py  hello_basic.py  main.py  simple_argparse.py  typer.md
lab_3/streamlit_demo/: app.py  demo_app.py  pyproject.toml  streamlit.md
lab_3/streamlit_demo/pages/: greeting.py  widgets.py
output/: 2408.09869v5.md
output/tables/: 2408.09869v5-table-2.html  2408.09869v5-table-3.html
